--- a/exploratory-data-analysis/EDA.ipynb
+++ b/exploratory-data-analysis/EDA.ipynb
@@ -73,8 +73,13 @@
    "metadata": {},
    "source": [
     "## **Business goal**\n",
-    "To predict whether the potential borrower will pay off the loan."
+    "To predict whether the potential borrower will default."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2360,7 +2365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.6"
   },
   "vscode": {
    "interpreter": {
