--- a/exploratory-data-analysis/EDA.ipynb
+++ b/exploratory-data-analysis/EDA.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "**CURRENT ACCOUNT**, **SAVING ACCOUNT**, **SALARY ACCOUNT**, **FOREIGN ACCOUNT** - whether the client has this type of account *(1 - yes, 0 - no)* <br/>\n",
     "\n",
-    "**FINALIZED LOAN** - whether the client has repaid the loan *(1 - yes, 0 - no)*<br/>\n",
+    "**FINALIZED LOAN** - ??? *(1 - yes, 0 - no)*<br/>\n",
     "\n",
     "**DEPOSIT** - whether the client has a deposit *(1 - yes, 0 - no)*<br/>\n",
     "\n",
@@ -1367,18 +1367,7 @@
     "- maxiumum values of BUSINESS AGE **are NOT** outliers\n",
     "- maxiumum values of INCOME **are NOT** outliers (?)\n",
     "\n",
-    "We will replace outliers with median."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z = np.abs(stats.zscore(df[\"LENGTH_RELATIONSHIP_WITH_CLIENT\"]))\n",
-    "outliers_indices = np.where(z > 3)[0]\n",
-    "df.loc[outliers_indices, \"LENGTH_RELATIONSHIP_WITH_CLIENT\"] = df[\"LENGTH_RELATIONSHIP_WITH_CLIENT\"].median()"
+    "Later, we will transform the data to reduce the influence of outliers."
    ]
   },
   {
