highly correlated variables

--- a/feature-selection/feature_selection.ipynb
+++ b/feature-selection/feature_selection.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e24171ca9eff0e1b",
    "metadata": {
     "ExecuteTime": {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2b2abdf8fb6a1a0f",
    "metadata": {
     "ExecuteTime": {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "48ae2dc8309fec06",
    "metadata": {
     "ExecuteTime": {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "0b5cb870",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,6 @@
       "RESIDENTIAL_PLACE_Other : 246 out of 15097\n",
       "ECONOMIC_SECTOR_Financial and insurance activities : 274 out of 15097\n",
       "ECONOMIC_SECTOR_Water supply : 333 out of 15097\n",
-      "ECONOMIC_SECTOR_Construction : 358 out of 15097\n",
       "ECONOMIC_SECTOR_Professional, scientific and technical activities : 393 out of 15097\n",
       "ECONOMIC_SECTOR_Education : 460 out of 15097\n",
       "ECONOMIC_SECTOR_Information and communication : 517 out of 15097\n",
@@ -297,6 +296,7 @@
       "EDUCATION_Post-graduate : 1046 out of 15097\n",
       "EDUCATION_Vocational school : 1228 out of 15097\n",
       "ECONOMIC_SECTOR_Public administration and defence : 1257 out of 15097\n",
+      "ECONOMIC_SECTOR_Wholesale and retail trade : 1413 out of 15097\n",
       "PRODUCT_E : 1522 out of 15097\n",
       "EDUCATION_Post secondary school : 1620 out of 15097\n",
       "ECONOMIC_SECTOR_Manufacturing : 3093 out of 15097\n",
@@ -305,8 +305,8 @@
       "PRODUCT_B : 3407 out of 15097\n",
       "EDUCATION_Highschool : 3451 out of 15097\n",
       "AREA_Rural area : 4192 out of 15097\n",
+      "ECONOMIC_SECTOR_Construction : 4367 out of 15097\n",
       "MARITAL_STATUS_single : 5113 out of 15097\n",
-      "ECONOMIC_SECTOR_Wholesale and retail trade : 5422 out of 15097\n",
       "RESIDENTIAL_PLACE_Living with family : 5505 out of 15097\n",
       "EDUCATION_University : 6148 out of 15097\n",
       "PRODUCT_C : 6779 out of 15097\n",
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "b106b531",
    "metadata": {},
    "outputs": [],
@@ -360,10 +360,147 @@
   },
   {
    "cell_type": "markdown",
+   "id": "956443d5",
+   "metadata": {},
+   "source": [
+    "# High correlated features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0229300c",
+   "metadata": {},
+   "source": [
+    "From EDA heat map we know that there were some highly correlated features, let's display them now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3735600a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pearson Correlated Pairs:\n",
+      "('NO_OF_DEPENDENTS', 'HOUSEHOLD_MEMBERS', 0.73)\n",
+      "('CURRENT_ACCOUNT', 'DEBIT_CARD', 0.81)\n",
+      "('RESIDENTIAL_PLACE_Owner without mortgage', 'RESIDENTIAL_PLACE_Living with family', -0.85)\n",
+      "('MARITAL_STATUS_married', 'HOUSEHOLD_MEMBERS', 0.78)\n",
+      "('MARITAL_STATUS_single', 'MARITAL_STATUS_married', -0.77)\n",
+      "\n",
+      "Spearman Correlated Pairs:\n",
+      "('CURRENT_ACCOUNT', 'DEBIT_CARD', 0.81)\n",
+      "('RESIDENTIAL_PLACE_Owner without mortgage', 'RESIDENTIAL_PLACE_Living with family', -0.85)\n",
+      "('MARITAL_STATUS_married', 'HOUSEHOLD_MEMBERS', 0.88)\n",
+      "('MARITAL_STATUS_single', 'HOUSEHOLD_MEMBERS', -0.71)\n",
+      "('MARITAL_STATUS_single', 'MARITAL_STATUS_married', -0.77)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_correlated_pairs(X, k):\n",
+    "    # Calculate Pearson correlation coefficients\n",
+    "    pearson_corr = X.corr(method='pearson')\n",
+    "\n",
+    "    # Calculate Spearman correlation coefficients\n",
+    "    spearman_corr = X.corr(method='spearman')\n",
+    "\n",
+    "    # Initialize lists to store correlated pairs\n",
+    "    pearson_correlated_pairs = []\n",
+    "    spearman_correlated_pairs = []\n",
+    "    \n",
+    "    # Initialize set for storing column names\n",
+    "    cols = set()\n",
+    "\n",
+    "    # Loop through each pair of features\n",
+    "    for i in range(len(X.columns)):\n",
+    "        for j in range(len(X.columns)):\n",
+    "            if i > j:\n",
+    "                # Check Pearson correlation coefficient\n",
+    "                if abs(pearson_corr.iloc[i, j]) > k:\n",
+    "                    col1, col2 = pearson_corr.columns[i], pearson_corr.columns[j]\n",
+    "                    pearson_correlated_pairs.append((col1, col2, round(pearson_corr.loc[col1, col2], 2)))\n",
+    "                    cols.add(col1)\n",
+    "                    cols.add(col2)\n",
+    "                # Check Spearman correlation coefficient\n",
+    "                if abs(spearman_corr.iloc[i, j]) > k:\n",
+    "                    col1, col2 = spearman_corr.columns[i], pearson_corr.columns[j]\n",
+    "                    spearman_correlated_pairs.append((col1, col2, round(spearman_corr.loc[col1, col2], 2)))\n",
+    "                    cols.add(col1)\n",
+    "                    cols.add(col2)\n",
+    "\n",
+    "    return pearson_correlated_pairs, spearman_correlated_pairs, cols\n",
+    "\n",
+    "\n",
+    "pearson_pairs, spearman_pairs, cols = find_correlated_pairs(X_train_transformed, 0.7)\n",
+    "print(\"Pearson Correlated Pairs:\")\n",
+    "for pair in pearson_pairs:\n",
+    "    print(pair)\n",
+    "print(\"\\nSpearman Correlated Pairs:\")\n",
+    "for pair in spearman_pairs:\n",
+    "    print(pair)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae304cdd",
+   "metadata": {},
+   "source": [
+    "## Lets check correlation of these features with target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "91c7ab0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlations with target (sorted in descending order):\n",
+      "MARITAL_STATUS_single: 0.16\n",
+      "MARITAL_STATUS_married: -0.14\n",
+      "RESIDENTIAL_PLACE_Living with family: 0.12\n",
+      "HOUSEHOLD_MEMBERS: -0.1\n",
+      "RESIDENTIAL_PLACE_Owner without mortgage: -0.09\n",
+      "CURRENT_ACCOUNT: -0.03\n",
+      "DEBIT_CARD: -0.02\n",
+      "NO_OF_DEPENDENTS: 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_sorted_correlations(X, cols, target):\n",
+    "    # Calculate correlations with target for each column in cols\n",
+    "    correlations = {}\n",
+    "    for col in cols:\n",
+    "        correlation = target.corr(X[col])\n",
+    "        correlations[col] = round(correlation, 2)\n",
+    "\n",
+    "    # Sort correlations in descending order\n",
+    "    sorted_correlations = sorted(correlations.items(), key=lambda x: abs(x[1]), reverse=True)\n",
+    "\n",
+    "    # Print sorted correlations\n",
+    "    print(\"Correlations with target (sorted in descending order):\")\n",
+    "    for col, correlation in sorted_correlations:\n",
+    "        print(f\"{col}: {correlation}\")\n",
+    "    \n",
+    "    return sorted_correlations\n",
+    "\n",
+    "sorted_correlations = get_sorted_correlations(X_train_transformed, cols, target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "95c70777",
    "metadata": {},
    "source": [
-    "# Feature importance - Random Forest Classifier"
+    "## Also lets see feature importance in RandomForestClassifier"
    ]
   },
   {
@@ -377,57 +514,57 @@
      "output_type": "stream",
      "text": [
       "                                              Feature  Importance\n",
-      "3                                              INCOME    0.154769\n",
-      "0                                                 AGE    0.133098\n",
-      "5                                        BUSINESS_AGE    0.089412\n",
-      "4                                      WORK_SENIORITY    0.068363\n",
-      "6                                         EMPLOYEE_NO    0.056097\n",
-      "7                     LENGTH_RELATIONSHIP_WITH_CLIENT    0.054800\n",
-      "9                                     CURRENT_ACCOUNT    0.018597\n",
-      "16                                    AREA_Rural area    0.018021\n",
-      "28                               EDUCATION_University    0.017988\n",
-      "1                                   HOUSEHOLD_MEMBERS    0.017627\n",
-      "23                               EDUCATION_Highschool    0.017372\n",
-      "2                                    NO_OF_DEPENDENTS    0.017335\n",
-      "42                      ECONOMIC_SECTOR_Manufacturing    0.017260\n",
-      "15                                AREA_County capital    0.017236\n",
-      "18               RESIDENTIAL_PLACE_Living with family    0.016198\n",
-      "17                                    AREA_Urban area    0.016161\n",
-      "8                                          DEBIT_CARD    0.016152\n",
-      "26                    EDUCATION_Post secondary school    0.015612\n",
-      "32                              MARITAL_STATUS_single    0.015463\n",
-      "14                                          PRODUCT_F    0.015195\n",
-      "12                                          PRODUCT_C    0.014573\n",
-      "25                                    EDUCATION_Other    0.013968\n",
-      "11                                          PRODUCT_B    0.013607\n",
-      "50         ECONOMIC_SECTOR_Wholesale and retail trade    0.013524\n",
-      "21           RESIDENTIAL_PLACE_Owner without mortgage    0.013290\n",
-      "31                             MARITAL_STATUS_married    0.010354\n",
-      "29                        EDUCATION_Vocational school    0.010247\n",
-      "46  ECONOMIC_SECTOR_Public administration and defence    0.010215\n",
-      "10                                     SALARY_ACCOUNT    0.009841\n",
-      "22                                  EDUCATION_College    0.009463\n",
-      "44                              ECONOMIC_SECTOR_Other    0.008155\n",
-      "48         ECONOMIC_SECTOR_Transportation and storage    0.007560\n",
-      "24                            EDUCATION_Middle school    0.007354\n",
-      "13                                          PRODUCT_E    0.005980\n",
-      "30                            MARITAL_STATUS_divorced    0.005968\n",
-      "34  ECONOMIC_SECTOR_Accommodation and food service...    0.005718\n",
-      "40  ECONOMIC_SECTOR_Human health and social work a...    0.005699\n",
-      "49                       ECONOMIC_SECTOR_Water supply    0.005656\n",
-      "36                       ECONOMIC_SECTOR_Construction    0.005611\n",
-      "35  ECONOMIC_SECTOR_Agriculture, hunting and forestry    0.005545\n",
-      "27                            EDUCATION_Post-graduate    0.004942\n",
-      "19                            RESIDENTIAL_PLACE_Other    0.004632\n",
-      "33                               MARITAL_STATUS_widow    0.003804\n",
-      "45  ECONOMIC_SECTOR_Professional, scientific and t...    0.002532\n",
-      "37                          ECONOMIC_SECTOR_Education    0.002035\n",
-      "41      ECONOMIC_SECTOR_Information and communication    0.001834\n",
-      "47             ECONOMIC_SECTOR_Real estate activities    0.001483\n",
-      "20              RESIDENTIAL_PLACE_Owner with mortgage    0.001372\n",
-      "39  ECONOMIC_SECTOR_Financial and insurance activi...    0.001045\n",
-      "38                ECONOMIC_SECTOR_Electricity and gas    0.000799\n",
-      "43               ECONOMIC_SECTOR_Mining and quarrying    0.000439\n"
+      "3                                              INCOME    0.155290\n",
+      "0                                                 AGE    0.130838\n",
+      "5                                        BUSINESS_AGE    0.087166\n",
+      "4                                      WORK_SENIORITY    0.067820\n",
+      "7                     LENGTH_RELATIONSHIP_WITH_CLIENT    0.056225\n",
+      "6                                         EMPLOYEE_NO    0.054252\n",
+      "9                                     CURRENT_ACCOUNT    0.019432\n",
+      "2                                    NO_OF_DEPENDENTS    0.018308\n",
+      "15                                AREA_County capital    0.018191\n",
+      "16                                    AREA_Rural area    0.018139\n",
+      "14                                          PRODUCT_F    0.017673\n",
+      "1                                   HOUSEHOLD_MEMBERS    0.017530\n",
+      "28                               EDUCATION_University    0.017318\n",
+      "23                               EDUCATION_Highschool    0.017079\n",
+      "17                                    AREA_Urban area    0.016630\n",
+      "32                              MARITAL_STATUS_single    0.016409\n",
+      "18               RESIDENTIAL_PLACE_Living with family    0.016366\n",
+      "42                      ECONOMIC_SECTOR_Manufacturing    0.016180\n",
+      "8                                          DEBIT_CARD    0.015464\n",
+      "26                    EDUCATION_Post secondary school    0.015358\n",
+      "12                                          PRODUCT_C    0.015326\n",
+      "11                                          PRODUCT_B    0.014080\n",
+      "50         ECONOMIC_SECTOR_Wholesale and retail trade    0.013478\n",
+      "25                                    EDUCATION_Other    0.013405\n",
+      "36                       ECONOMIC_SECTOR_Construction    0.011392\n",
+      "21           RESIDENTIAL_PLACE_Owner without mortgage    0.011363\n",
+      "31                             MARITAL_STATUS_married    0.010658\n",
+      "10                                     SALARY_ACCOUNT    0.009793\n",
+      "22                                  EDUCATION_College    0.009779\n",
+      "29                        EDUCATION_Vocational school    0.009397\n",
+      "44                              ECONOMIC_SECTOR_Other    0.008269\n",
+      "48         ECONOMIC_SECTOR_Transportation and storage    0.008084\n",
+      "24                            EDUCATION_Middle school    0.007447\n",
+      "13                                          PRODUCT_E    0.006523\n",
+      "40  ECONOMIC_SECTOR_Human health and social work a...    0.006129\n",
+      "30                            MARITAL_STATUS_divorced    0.005974\n",
+      "49                       ECONOMIC_SECTOR_Water supply    0.005676\n",
+      "46  ECONOMIC_SECTOR_Public administration and defence    0.005633\n",
+      "35  ECONOMIC_SECTOR_Agriculture, hunting and forestry    0.005588\n",
+      "34  ECONOMIC_SECTOR_Accommodation and food service...    0.005237\n",
+      "27                            EDUCATION_Post-graduate    0.004949\n",
+      "33                               MARITAL_STATUS_widow    0.004200\n",
+      "19                            RESIDENTIAL_PLACE_Other    0.004159\n",
+      "45  ECONOMIC_SECTOR_Professional, scientific and t...    0.002557\n",
+      "37                          ECONOMIC_SECTOR_Education    0.002023\n",
+      "41      ECONOMIC_SECTOR_Information and communication    0.001762\n",
+      "47             ECONOMIC_SECTOR_Real estate activities    0.001724\n",
+      "20              RESIDENTIAL_PLACE_Owner with mortgage    0.001257\n",
+      "39  ECONOMIC_SECTOR_Financial and insurance activi...    0.001125\n",
+      "38                ECONOMIC_SECTOR_Electricity and gas    0.000940\n",
+      "43               ECONOMIC_SECTOR_Mining and quarrying    0.000406\n"
      ]
     }
    ],
@@ -445,6 +582,104 @@
     "importance_df = importance_df.sort_values(by='Importance', ascending=False)\n",
     "\n",
     "print(importance_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cae47575",
+   "metadata": {},
+   "source": [
+    "## Summarize these outcomes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e3b0e85",
+   "metadata": {},
+   "source": [
+    "This summarization below contains no new data, it was just created for pracitcal reason to avoid scrolling through cells."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "55a1cee2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('NO_OF_DEPENDENTS', 'HOUSEHOLD_MEMBERS', 0.73)\n",
+      "                            NO_OF_DEPENDENTS  HOUSEHOLD_MEMBERS\n",
+      "0  Correlation with target          0.010000           -0.10000\n",
+      "1       Feature importance          0.018308            0.01753 \n",
+      "\n",
+      "('CURRENT_ACCOUNT', 'DEBIT_CARD', 0.81)\n",
+      "                            CURRENT_ACCOUNT  DEBIT_CARD\n",
+      "0  Correlation with target        -0.030000   -0.020000\n",
+      "1       Feature importance         0.019432    0.015464 \n",
+      "\n",
+      "('RESIDENTIAL_PLACE_Owner without mortgage', 'RESIDENTIAL_PLACE_Living with family', -0.85)\n",
+      "                            RESIDENTIAL_PLACE_Owner without mortgage  \\\n",
+      "0  Correlation with target                                 -0.090000   \n",
+      "1       Feature importance                                  0.011363   \n",
+      "\n",
+      "   RESIDENTIAL_PLACE_Living with family  \n",
+      "0                              0.120000  \n",
+      "1                              0.016366   \n",
+      "\n",
+      "('MARITAL_STATUS_married', 'HOUSEHOLD_MEMBERS', 0.78)\n",
+      "                            MARITAL_STATUS_married  HOUSEHOLD_MEMBERS\n",
+      "0  Correlation with target               -0.140000           -0.10000\n",
+      "1       Feature importance                0.010658            0.01753 \n",
+      "\n",
+      "('MARITAL_STATUS_single', 'MARITAL_STATUS_married', -0.77)\n",
+      "                            MARITAL_STATUS_single  MARITAL_STATUS_married\n",
+      "0  Correlation with target               0.160000               -0.140000\n",
+      "1       Feature importance               0.016409                0.010658 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_table(X, triple, feature_importances):\n",
+    "    # Extract elements from the triple\n",
+    "    col1, col2, correlation = triple\n",
+    "\n",
+    "    # Get correlation with target for each column\n",
+    "    corr_with_target_col1 = round(target.corr(X[col1]), 2)\n",
+    "    corr_with_target_col2 = round(target.corr(X[col2]), 2)\n",
+    "\n",
+    "    # Get feature importances for each column\n",
+    "    importance_col1 = feature_importances.loc[feature_importances['Feature'] == col1, 'Importance'].values[0]\n",
+    "    importance_col2 = feature_importances.loc[feature_importances['Feature'] == col2, 'Importance'].values[0]\n",
+    "\n",
+    "    # Construct the table as a DataFrame\n",
+    "    table = pd.DataFrame({\n",
+    "        '': ['Correlation with target', 'Feature importance'],\n",
+    "        col1: [corr_with_target_col1, importance_col1],\n",
+    "        col2: [corr_with_target_col2, importance_col2]\n",
+    "    })\n",
+    "\n",
+    "    return table\n",
+    "\n",
+    "\n",
+    "\n",
+    "for pair in pearson_pairs:\n",
+    "    print(pair)\n",
+    "    table = create_table(X_train_transformed, pair, importance_df)\n",
+    "    print(table, '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3478ca78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### TODO add comments and decide what feature should be removed"
    ]
   }
  ],
