--- a/feature-engineering/feature_engineering.ipynb
+++ b/feature-engineering/feature_engineering.ipynb
@@ -48,19 +48,6 @@
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
     "\n",
-    "# Function to create dictionary containing distribution of a categorical column\n",
-    "def get_col_distribution(X, col_name):\n",
-    "    value_counts = X[col_name].value_counts()\n",
-    "    number_of_missing_values = value_counts[\"Missing\"]\n",
-    "    value_counts_dict = value_counts[1:].to_dict()\n",
-    "    \n",
-    "    # change to probabilities\n",
-    "    for key in value_counts_dict:\n",
-    "        value_counts_dict[key] = value_counts_dict[key] / (len(X) - number_of_missing_values)\n",
-    "    \n",
-    "    return value_counts_dict\n",
-    "\n",
-    "\n",
     "# Simple column remover to remove low variance columns\n",
     "class FeatureRemover(BaseEstimator, TransformerMixin):\n",
     "    def __init__(self, columns_to_drop):\n",
@@ -94,6 +81,25 @@
     "        self.cols_mode_imputation = cols_mode_imputation\n",
     "        self.cols_dist_imputation = cols_dist_imputation\n",
     "    \n",
+    "    # Function to create dictionary containing distribution of a categorical column\n",
+    "    def get_col_distribution(X, col_name):\n",
+    "        value_counts = X[col_name].value_counts()\n",
+    "        number_of_missing_values = value_counts[\"Missing\"]\n",
+    "        value_counts_dict = value_counts[1:].to_dict()\n",
+    "        \n",
+    "        # change to probabilities\n",
+    "        for key in value_counts_dict:\n",
+    "            value_counts_dict[key] = value_counts_dict[key] / (len(X) - number_of_missing_values)\n",
+    "\n",
+    "        # if probabilites do not sum to 1 due to numerical errors\n",
+    "        if 0.99 < sum(value_counts_dict.values()) < 1:\n",
+    "            max_value = max(value_counts_dict.values())\n",
+    "            max_key = [key for key, value in value_counts_dict.items() if value == max_value][0]\n",
+    "\n",
+    "            value_counts_dict[max_key] += 1 - sum(value_counts_dict.values())\n",
+    "\n",
+    "        return value_counts_dict\n",
+    "\n",
     "    def fit(self, X, y=None):\n",
     "        for col_name in self.cols_mode_imputation:\n",
     "            self.modes[col_name] = X[col_name].mode()[0]\n",
