--- a/feature-engineering/feature_engineering.ipynb
+++ b/feature-engineering/feature_engineering.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e24171ca9eff0e1b",
    "metadata": {
     "ExecuteTime": {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "2b2abdf8fb6a1a0f",
    "metadata": {
     "ExecuteTime": {
@@ -47,6 +47,7 @@
    "source": [
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "\n",
     "\n",
     "# Simple column remover to remove low variance columns\n",
     "class FeatureRemover(BaseEstimator, TransformerMixin):\n",
@@ -82,7 +83,7 @@
     "        self.cols_dist_imputation = cols_dist_imputation\n",
     "    \n",
     "    # Function to create dictionary containing distribution of a categorical column\n",
-    "    def get_col_distribution(X, col_name):\n",
+    "    def get_col_distribution(self, X, col_name):\n",
     "        value_counts = X[col_name].value_counts()\n",
     "        number_of_missing_values = value_counts[\"Missing\"]\n",
     "        value_counts_dict = value_counts[1:].to_dict()\n",
@@ -105,7 +106,7 @@
     "            self.modes[col_name] = X[col_name].mode()[0]\n",
     "        \n",
     "        for col_name in self.cols_dist_imputation:\n",
-    "            self.distributions_of_columns[col_name] = get_col_distribution(X, col_name)\n",
+    "            self.distributions_of_columns[col_name] = self.get_col_distribution(X, col_name)\n",
     "        \n",
     "        return self\n",
     "    \n",
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "48ae2dc8309fec06",
    "metadata": {
     "ExecuteTime": {
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "0b5cb870",
    "metadata": {},
    "outputs": [
@@ -299,6 +300,7 @@
       "ECONOMIC_SECTOR_Transportation and storage                                   691    15097     4.57707\n",
       "MARITAL_STATUS_widow                                                         798    15097     5.28582\n",
       "EDUCATION_Other                                                              819    15097     5.42492\n",
+      "ECONOMIC_SECTOR_Other                                                        840    15097     5.56402\n",
       "RESIDENTIAL_PLACE_Owner with mortgage                                        861    15097     5.70312\n",
       "MARITAL_STATUS_divorced                                                     1045    15097     6.92191\n",
       "EDUCATION_Post-graduate                                                     1046    15097     6.92853\n",
@@ -307,17 +309,16 @@
       "ECONOMIC_SECTOR_Wholesale and retail trade                                  1413    15097     9.35948\n",
       "PRODUCT_E                                                                   1522    15097    10.0815\n",
       "EDUCATION_Post secondary school                                             1620    15097    10.7306\n",
-      "ECONOMIC_SECTOR_Manufacturing                                               3093    15097    20.4875\n",
       "AREA_Urban area                                                             3286    15097    21.7659\n",
       "PRODUCT_F                                                                   3334    15097    22.0839\n",
       "PRODUCT_B                                                                   3407    15097    22.5674\n",
       "EDUCATION_Highschool                                                        3451    15097    22.8588\n",
       "AREA_Rural area                                                             4192    15097    27.7671\n",
-      "ECONOMIC_SECTOR_Other                                                       4849    15097    32.119\n",
       "MARITAL_STATUS_single                                                       5113    15097    33.8677\n",
       "RESIDENTIAL_PLACE_Living with family                                        5505    15097    36.4642\n",
       "EDUCATION_University                                                        6148    15097    40.7233\n",
       "PRODUCT_C                                                                   6779    15097    44.903\n",
+      "ECONOMIC_SECTOR_Manufacturing                                               7102    15097    47.0425\n",
       "AREA_County capital                                                         7619    15097    50.467\n",
       "MARITAL_STATUS_married                                                      8141    15097    53.9246\n",
       "RESIDENTIAL_PLACE_Owner without mortgage                                    8457    15097    56.0178\n"
@@ -325,6 +326,8 @@
     }
    ],
    "source": [
+    "from tabulate import tabulate\n",
+    "\n",
     "encoded_columns = X_train_transformed.select_dtypes(include=['bool'])\n",
     "\n",
     "# dictionary for saving number of true values in particular columns\n",
@@ -354,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "b106b531",
    "metadata": {},
    "outputs": [],
@@ -369,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "75335389",
    "metadata": {},
    "outputs": [
@@ -379,7 +382,7 @@
        "['processing_pipeline.joblib']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
