--- a/feature-engineering/feature_engineering.ipynb
+++ b/feature-engineering/feature_engineering.ipynb
@@ -872,8 +872,8 @@
    "outputs": [],
    "source": [
     "from joblib import load\n",
-    "pipeline_processing = load('processing_pipeline.joblib')\n",
-    "pipeline_engineering = load('engineering_pipeline.joblib')"
+    "pipeline_processing = load('pipelines/processing_pipeline.joblib')\n",
+    "pipeline_engineering = load('pipelines/engineering_pipeline.joblib')"
    ]
   },
   {
@@ -1223,7 +1223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   },
   "vscode": {
    "interpreter": {
