--- a/feature-engineering/modeling.ipynb
+++ b/feature-engineering/modeling.ipynb
@@ -11,8 +11,8 @@
     "from joblib import load\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "pipeline_processing = load('processing_pipeline.joblib')\n",
-    "pipeline_engineering = load('engineering_pipeline.joblib')"
+    "pipeline_processing = load('pipelines/processing_pipeline.joblib')\n",
+    "pipeline_engineering = load('pipelines/engineering_pipeline.joblib')"
    ]
   },
   {
@@ -158,13 +158,13 @@
       "    Model                         Accuracy      Recall    Precision    F1 Score\n",
       "--  --------------------------  ----------  ----------  -----------  ----------\n",
       " 0  DecisionTreeClassifier        1         1              1          1\n",
-      " 1  MLPClassifier                 0.968603  0.486111       0.933333   0.639269\n",
-      " 2  GaussianNB                    0.707227  0.78588        0.138177   0.235029\n",
-      " 3  GradientBoostingClassifier    0.946744  0.0821759      0.865854   0.150106\n",
-      " 4  AdaBoostClassifier            0.942505  0.056713       0.480392   0.101449\n",
+      " 1  MLPClassifier                 0.967411  0.47338        0.91704    0.624427\n",
+      " 2  GaussianNB                    0.681327  0.790509       0.128553   0.221143\n",
+      " 3  GradientBoostingClassifier    0.946943  0.0868056      0.862069   0.157729\n",
+      " 4  AdaBoostClassifier            0.942174  0.0474537      0.450549   0.0858639\n",
       " 5  RandomForestClassifier        1         1              1          1\n",
-      " 6  LogisticRegression            0.943366  0.0127315      0.846154   0.0250855\n",
-      " 7  XGBClassifier                 0.98768   0.793981       0.988473   0.880616\n",
+      " 6  LogisticRegression            0.943366  0.0115741      0.909091   0.0228571\n",
+      " 7  XGBClassifier                 0.986951  0.777778       0.992614   0.872161\n",
       " 8  SVC                           0.943234  0.00810185     1          0.0160735\n"
      ]
     }
@@ -193,14 +193,14 @@
       "Validation data\n",
       "    Model                         Accuracy      Recall    Precision    F1 Score\n",
       "--  --------------------------  ----------  ----------  -----------  ----------\n",
-      " 0  DecisionTreeClassifier        0.938176  0.540541       0.465116   0.5\n",
-      " 1  MLPClassifier                 0.934158  0.205405       0.365385   0.262976\n",
-      " 2  GaussianNB                    0.666461  0.827027       0.1275     0.220939\n",
-      " 3  GradientBoostingClassifier    0.944049  0.0648649      0.6        0.117073\n",
-      " 4  AdaBoostClassifier            0.942195  0.0540541      0.454545   0.0966184\n",
-      " 5  RandomForestClassifier        0.955487  0.243243       0.918367   0.384615\n",
+      " 0  DecisionTreeClassifier        0.928903  0.556757       0.410359   0.472477\n",
+      " 1  MLPClassifier                 0.939104  0.156757       0.414286   0.227451\n",
+      " 2  GaussianNB                    0.765997  0.718919       0.158711   0.26002\n",
+      " 3  GradientBoostingClassifier    0.943431  0.0702703      0.541667   0.124402\n",
+      " 4  AdaBoostClassifier            0.943431  0.0540541      0.555556   0.0985222\n",
+      " 5  RandomForestClassifier        0.953323  0.205405       0.904762   0.334802\n",
       " 6  LogisticRegression            0.943431  0.0108108      1          0.0213904\n",
-      " 7  XGBClassifier                 0.958578  0.367568       0.8        0.503704\n",
+      " 7  XGBClassifier                 0.958269  0.324324       0.857143   0.470588\n",
       " 8  SVC                           0.943122  0.00540541     1          0.0107527\n"
      ]
     }
@@ -214,7 +214,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This data set is not balanced so a better option to choose the right model is to compare ROC curves, AUC and GINI."
+    "This data set is not balanced so a better option to choose the right model is to compare ROC curves, AUC and GINI.\n",
+    "These metrics will inform us whether a model correctly ordered the observations according to the probabilities of consumers defaulting on a loan. According to those probabilities decision about giving a loan would be made."
    ]
   },
   {
@@ -381,6 +382,117 @@
    "source": [
     "*GINI is a linear combination of AUC so shapes of these 2 plots are the same*"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "\n",
+    "def hyperparameters_tuning(param_grid, model, folds, param_comb, X, y):\n",
+    "    skf = StratifiedKFold(n_splits=folds, shuffle=True, random_state=1001)\n",
+    "\n",
+    "    random_search = RandomizedSearchCV(estimator=model, param_distributions=param_grid, n_iter=param_comb,\n",
+    "                                   scoring='roc_auc', random_state=1001, cv=skf.split(X, y))\n",
+    "    \n",
+    "    random_search.fit(X, y)\n",
+    "\n",
+    "    print('\\n Best estimator:')\n",
+    "    print(random_search.best_estimator_)\n",
+    "    print('\\n Best normalized gini score for %d-fold search with %d parameter combinations:' % (folds, param_comb))\n",
+    "    print(random_search.best_score_ * 2 - 1)\n",
+    "    print('\\n Best hyperparameters:')\n",
+    "    print(random_search.best_params_)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Best estimator:\n",
+      "XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
+      "              colsample_bylevel=None, colsample_bynode=None,\n",
+      "              colsample_bytree=0.6, device=None, early_stopping_rounds=None,\n",
+      "              enable_categorical=False, eval_metric=None, feature_types=None,\n",
+      "              gamma=0.5, grow_policy=None, importance_type=None,\n",
+      "              interaction_constraints=None, learning_rate=None, max_bin=None,\n",
+      "              max_cat_threshold=None, max_cat_to_onehot=None,\n",
+      "              max_delta_step=None, max_depth=5, max_leaves=None,\n",
+      "              min_child_weight=1, missing=nan, monotone_constraints=None,\n",
+      "              multi_strategy=None, n_estimators=None, n_jobs=None,\n",
+      "              num_parallel_tree=None, random_state=None, ...)\n",
+      "\n",
+      " Best normalized gini score for 5-fold search with 100 parameter combinations:\n",
+      "0.7462758256417856\n",
+      "\n",
+      " Best hyperparameters:\n",
+      "{'subsample': 0.8, 'min_child_weight': 1, 'max_depth': 5, 'gamma': 0.5, 'colsample_bytree': 0.6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "param_grid = {\n",
+    "    'max_depth': [3, 4, 5],\n",
+    "    'gamma': [0.5, 1, 1.5, 2, 5],\n",
+    "    'min_child_weight': [1, 5, 10],\n",
+    "    'colsample_bytree': [0.6, 0.8, 1.0],\n",
+    "    'subsample': [0.6, 0.8, 1.0]\n",
+    "}\n",
+    "\n",
+    "\n",
+    "hyperparameters_tuning(param_grid=param_grid, model=XGBClassifier(), folds=5, param_comb=100, X=X_train, y=y_train)\n",
+    "\n",
+    "# results.to_csv('../model-results/xgb-random-grid-search-results-01.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Best estimator:\n",
+      "RandomForestClassifier(max_depth=30, min_samples_split=10, n_estimators=50)\n",
+      "\n",
+      " Best normalized gini score for 5-fold search with 5 parameter combinations:\n",
+      "0.7537836970767078\n",
+      "\n",
+      " Best hyperparameters:\n",
+      "{'n_estimators': 50, 'min_samples_split': 10, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'max_depth': 30}\n"
+     ]
+    }
+   ],
+   "source": [
+    "param_grid = {\n",
+    "    'n_estimators': [10, 50, 100, 200],\n",
+    "    'max_depth': [None, 10, 20, 30],\n",
+    "    'min_samples_split': [2, 5, 10],\n",
+    "    'min_samples_leaf': [1, 2, 4],\n",
+    "    'max_features': ['auto', 'sqrt']\n",
+    "}\n",
+    "\n",
+    "hyperparameters_tuning(param_grid=param_grid, model=RandomForestClassifier(), folds=5, param_comb=100, X=X_train, y=y_train)"
+   ]
   }
  ],
  "metadata": {
@@ -399,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
